--- a/ReviewNow/ReviewNow.csproj
+++ b/ReviewNow/ReviewNow.csproj
@@ -10,8 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,8 +31,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\project\PROJECT\Project\Application\Application.csproj" />
     <ProjectReference Include="..\..\..\project\PROJECT\Project\Infrastructure\Infrastructure.csproj" />
-    <ProjectReference Include="..\..\project\PROJECT\Project\Application\Application.csproj" />
-    <ProjectReference Include="..\..\project\PROJECT\Project\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
